--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "firebase": "^8.6.1",
     "framer-motion": "^4",
